# Youtube-Freemium

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Readme.md  SECURITY.md  background.js  content.js  global.css  manifest.json  popup.css  popup.html  popup.js
.github/: FUNDING.yml
.github/agents/: freemium-agent.agent.md
src/: background.js  content.js  global.css  manifest.json  popup.css  popup.html  popup.js  utils.js  ytf-constants.js
test/: test.js
